--- a/wazotool_proto/App.xaml
+++ b/wazotool_proto/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:wazotool_proto"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Themes/btnMenuThemes.xaml"/> 
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
