--- a/wazotool_proto/MainWindow.xaml
+++ b/wazotool_proto/MainWindow.xaml
@@ -5,8 +5,85 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:wazotool_proto"
         mc:Ignorable="d"
-        Title="MainWindow" Height="540" Width="960" Background="#FF00121F">
-    <Grid x:Name="___No_Name_">
+        WindowStyle="None"
+        AllowsTransparency="True"
+        ResizeMode="NoResize"
+        Title="MainWindow" Height="540" Width="960" Background="#FF00121F" WindowStartupLocation="CenterScreen" Cursor="Hand">
+    <Border
+        x:Name="bdMain"
+        Background="#FF050019"
+        CornerRadius="5"
+        >
 
-    </Grid>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200"/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="75"/>
+                <RowDefinition/>
+                
+            </Grid.RowDefinitions>
+
+
+            <TextBlock
+                Text="WazoTool"
+                VerticalAlignment="Center"
+                HorizontalAlignment="Left"
+                Margin="10, 0, 0, 0"
+                Foreground ="White"
+                FontSize="36"
+                FontWeight="Bold"
+                FontStyle="Italic"
+                />
+
+
+            <StackPanel Grid.Row="1">
+                
+                <RadioButton
+                    Content="Home" 
+                    Foreground="White"
+                    FontSize="20"
+                    Height="50"
+                        Style="{StaticResource btnMenuTheme}"/>
+                
+                <RadioButton
+                        Content="Home" 
+                        Foreground="White"
+                        FontSize="20"
+                        Height="50"
+                        Style="{StaticResource btnMenuTheme}"/>
+
+                <RadioButton
+                        Content="Home" 
+                        Foreground="White"
+                        FontSize="20"
+                        Height="50"
+                        Style="{StaticResource btnMenuTheme}"/>
+
+                <RadioButton
+                        Content="Home" 
+                        Foreground="White"
+                        FontSize="20"
+                        Height="50"
+                        Style="{StaticResource btnMenuTheme}"/>
+
+                <RadioButton
+                        Content="Home" 
+                        Foreground="White"
+                        FontSize="20"
+                        Height="50"
+                        Style="{StaticResource btnMenuTheme}"/>
+
+
+
+            </StackPanel>
+               
+        </Grid>
+
+    </Border>
 </Window>
