--- a/wazotool_proto/MainWindow.xaml
+++ b/wazotool_proto/MainWindow.xaml
@@ -11,13 +11,13 @@
         Title="MainWindow" Height="540" Width="960" Background="#FF00121F" WindowStartupLocation="CenterScreen" Cursor="Hand">
     <Border
         x:Name="bdMain"
-        Background="#FF050019"
-        CornerRadius="5"
+        Background="#FF1A0A33"
+        CornerRadius="20"
         >
 
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="200"/>
+                <ColumnDefinition Width="250"/>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
@@ -25,7 +25,7 @@
 
             <Grid.RowDefinitions>
                 <RowDefinition Height="75"/>
-                <RowDefinition/>
+                <RowDefinition />
                 
             </Grid.RowDefinitions>
 
@@ -34,7 +34,7 @@
                 Text="WazoTool"
                 VerticalAlignment="Center"
                 HorizontalAlignment="Left"
-                Margin="10, 0, 0, 0"
+                Margin="25, 0, 0, 0"
                 Foreground ="White"
                 FontSize="36"
                 FontWeight="Bold"
@@ -45,35 +45,35 @@
             <StackPanel Grid.Row="1">
                 
                 <RadioButton
-                    Content="Home" 
+                    Content="Main Menu" 
                     Foreground="White"
                     FontSize="20"
                     Height="50"
                         Style="{StaticResource btnMenuTheme}"/>
                 
                 <RadioButton
-                        Content="Home" 
+                        Content="Install Mods" 
                         Foreground="White"
                         FontSize="20"
                         Height="50"
                         Style="{StaticResource btnMenuTheme}"/>
 
                 <RadioButton
-                        Content="Home" 
+                        Content="Browse Mods" 
                         Foreground="White"
                         FontSize="20"
                         Height="50"
                         Style="{StaticResource btnMenuTheme}"/>
 
                 <RadioButton
-                        Content="Home" 
+                        Content="Settings" 
                         Foreground="White"
                         FontSize="20"
                         Height="50"
                         Style="{StaticResource btnMenuTheme}"/>
 
                 <RadioButton
-                        Content="Home" 
+                        Content="Help" 
                         Foreground="White"
                         FontSize="20"
                         Height="50"
@@ -82,7 +82,11 @@
 
 
             </StackPanel>
-               
+
+            <ContentControl Grid.Row="1"
+                            Grid.Column="1"
+                            Margin="10,0,0,0"/>
+
         </Grid>
 
     </Border>
